# glog

./: .gitignore  CMakeLists.txt  README.md
examples/rules/rdfox/: UOBM_L.txt  UOBM_L.txt-vlog
include/glog/: dfstandardchase.h  gbchase.h  gbcompositesegment.h  gbgraph.h  gblegacysegment.h  gbquerier.h  gbruleexecutor.h  gbsegment.h  gbsegment_binary.h  gbsegment_unary.h  gbsegmentcache.h  gbsegmentcomprprov.h  gbsegmentinserter.h  gbsegmentitr.h  hashset.h  probgbchase.h  tgchase.h
include/python/: glog.h
include/vlog/: builtin.h  chase.h  chasemgmt.h  column.h  concepts.h  edb.h  edbconf.h  edbiterator.h  edbtable.h  exporter.h  extresultjoinproc.h  fcinttable.h  gbchase.h  gbgraph.h  gbruleexecutor.h  reasoner.h  segment.h  segment_support.h  seminaiver.h  support.h  term.h  tgchase.h  tgsegment.h  tgsegmentcache.h  tgsegmentitr.h  webinterface.h
include/vlog/builtintable/: builtintable.h
include/vlog/clique/: cliqueiterator.h  cliquetable.h
include/vlog/embeddings/: topkiterator.h  topktable.h
include/vlog/gbchase/: dfstandardchase.h  gbchase.h  gbcompositesegment.h  gbgraph.h  gblegacysegment.h  gbruleexecutor.h  gbsegment.h  gbsegment_binary.h  gbsegment_unary.h  gbsegmentcache.h  gbsegmentinserter.h  gbsegmentitr.h  tgchase.h
include/vlog/infround/: infrounditerator.h  infroundtable.h
include/vlog/inmemory/: inmemorytable.h
include/vlog/ml/: helper.h
include/vlog/text/: elasticitr.h  elastictable.h  stringitr.h  stringtable.h  stringtable_binary.h  stringtable_unary.h
include/vlog/timestamp/: timestampiterator.h  timestamptable.h
include/vlog/trident/: tridentiterator.h  tridenttable.h  tridenttupleitr.h
scripts/: count_nodes_tg.py  ontology_rdfs_rewriting.py  queryliteral_rules.py
src/glog/: dfstandardchase.cpp  gbchase.cpp  gbcompositesegment.cpp  gbgraph.cpp  gbgraph_mergenodes.cpp  gbgraph_redundant.cpp  gbgraph_retain.cpp  gblegacysegment.cpp  gbquerier.cpp  gbruleexecutor.cpp  gbruleexecutor_join.cpp  gbsegmentcache.cpp  gbsegmentcomprprov.cpp  gbsegmentinserter.cpp  probgbchase.cpp  tgchase.cpp
src/launcher/: main.cpp
src/python/: edblayer.cpp  glog.cpp  program.cpp  querier.cpp  reasoner.cpp  tg.cpp  wizard.cpp
src/vlog/: reasoner.cpp  utils.cpp
src/vlog/builtintable/: builtintable.cpp
src/vlog/clique/: cliqueiterator.cpp  cliquetable.cpp
src/vlog/common/: concepts.cpp  edb.cpp  edbconf.cpp  exporter.cpp  sqltable.cpp
src/vlog/cycles/: checker.cpp
src/vlog/embeddings/: topktable.cpp
src/vlog/forward/: chase.cpp  chasemgmt.cpp  column.cpp  edbfcinternaltable.cpp  extresultjoinproc.cpp  fcinttable.cpp  fctable.cpp  joinprocessor.cpp  ruleexecplan.cpp  segment.cpp  seminaiver.cpp  seminaiver_trigger.cpp  tgchase.cpp  tgsegment.cpp  tgsegmentcache.cpp
src/vlog/gbchase/: dfstandardchase.cpp  gbchase.cpp  gbcompositesegment.cpp  gbgraph.cpp  gbgraph_redundant.cpp  gblegacysegment.cpp  gbruleexecutor.cpp  gbsegment.cpp  gbsegmentcache.cpp  gbsegmentinserter.cpp  tgchase.cpp
src/vlog/infround/: infrounditerator.cpp  infroundtable.cpp
src/vlog/inmemory/: inmemorytable.cpp
src/vlog/java/native/: VLog.cpp
src/vlog/magic/: wizard.cpp
src/vlog/ml/: training.cpp
src/vlog/text/: elastictable.cpp  stringtable.cpp  stringtable_binary.cpp  stringtable_unary.cpp
src/vlog/timestamp/: timestampiterator.cpp  timestamptable.cpp
src/vlog/trident/: tridentiterator.cpp  tridenttable.cpp  tridenttupleitr.cpp
src/vlog/web/: webinterface.cpp
webinterface/: tab-query.html
